Motu becomes independent again of Atoll
git-svn-id: http://svn.code.sf.net/p/cls-motu/code/trunk@2205 4fb39819-1ace-417d-baf3-7cd5f5b47953